fix(gateway): 리뷰가 잡은 백오프 결함 다섯
리뷰가 실제로 값을 계산해 보고 잡았다. 다섯 다 시험이 초록인 채로 틀려 있었다.

상한에서 흔들림이 무너졌다. 상한으로 자른 뒤 흔들면 위로 흩어진 값이 전부
상한 한 점에 모여, 표본 10만에서 50.9%가 정확히 60초였다. 하필 장애가 길어진
구간이라 F7 이 막으려던 파도가 거기서 그대로 다시 생긴다. 정상 경로가 이미
같은 방식으로 푼 문제인데 그 교훈만 빼고 옮겨 왔다. 천장을 상한/(1+폭)으로
두고, 남은 여유만큼 폭을 줄여 편다.

아래로도 흔들고 있었다. 그러면 폴링 예산이 정한 바닥보다 빨리 부르게 되어,
하필 배수가 커진 구간에만 예산이 안 걸린다. 위로만 흔든다.

성공 하나가 실패 이력을 지웠다. 샤드 하나가 죽으면 일부만 실패하는데 피크에서는
성공이 초당 수천 건이라, 실패 사이에 반드시 성공이 껴 단계가 영원히 1 에 머문다.
백오프가 전면 장애에서만 도는 셈이었다. 마지막 실패로부터 유예가 지나야 푼다.

넓은 지터를 정상 폭으로 되돌려도 아무 시험이 안 물었다. 필터 시험이 난수를
0.5 로 고정해 흔들림 항이 0 이었기 때문이다. 난수를 양 끝으로 고정해 실제 폭을
잰다 — 이 티켓의 존재 이유가 그 폭이다.

문서와 코드가 갈라져 있었다. 조회 경로는 바닥 30초를 함께 넘기므로 앞 네 계단이
바닥에 가려 안 보인다. 실제 곡선을 시험으로 못 박고 상수에 적었다.

진입과 해제를 쌍으로 남기고 해제에 지속 시간을 담는다.

Refs: CY-801