@@ -12,11 +12,14 @@ import java.util.function.DoubleSupplier;
 public final class ErrorBackoff {
 
     /**
-     * 첫 실패의 간격(초).
+     * 첫 실패의 간격(초). <b>바닥이 없을 때만 보이는 값이다.</b>
      *
-     * <p>정상 경로의 가장 짧은 밴드보다 넓게 잡는다. 오류를 받은 사람은 아직
-     * 자기 자리를 모르므로, 짧게 부르면 알 것도 없이 다시 온다.
+     * @see #retryAfterSec(int, long, DoubleSupplier)
      */
+    // 조회 경로는 폴링 예산이 정한 바닥(ETA 미상 밴드 = 30초)을 함께 넘기므로,
+    // 실제로는 다섯째 계단(2·2^4 = 32)부터 이 값이 바닥을 넘어선다.
+    // 그 앞의 네 계단은 바닥에 가려 안 보인다 — 바닥이 이미 그만큼 멀기
+    // 때문이고, 거기서 더 당길 이유가 없다.
     public static final long BASE_SEC = 2;
 
     /**
@@ -51,6 +54,16 @@ public final class ErrorBackoff {
         this.baseSec = baseSec;
         this.maxSec = maxSec;
         this.jitterRatio = jitterRatio;
+    }
+
+    /**
+     * 백오프를 푸는 데 필요한 무실패 시간.
+     *
+     * <p>한 계단 폭과 같이 둔다. 한 계단 오르는 데 걸리는 만큼은 조용해야
+     * 푼다는 뜻이고, 그래야 부분 장애에서 오르내림이 대칭이 된다.
+     */
+    public static Duration quiet() {
+        return step();
     }
 
     /** 한 계단의 폭. 실패가 이 시간만큼 이어질 때마다 한 계단 멀어진다. */
@@ -101,10 +114,22 @@ public final class ErrorBackoff {
      */
     public long retryAfterSec(int consecutiveFailures, long floorSec, DoubleSupplier random) {
         int streak = Math.min(Math.max(consecutiveFailures, 1), MAX_DOUBLINGS);
-        // **상한을 먼저 씌운다.** 곱한 뒤에 흔들면 상한을 넘는 값이 나가고,
-        // 그러면 회복한 뒤에도 그만큼 아무도 안 돌아온다.
-        long base = Math.min(Math.max(baseSec << (streak - 1), floorSec), maxSec);
-        double jittered = base * (1 + jitterRatio * (2 * random.getAsDouble() - 1));
+        // **천장은 상한이 아니라 상한/(1+폭) 이다.** 상한으로 자른 뒤 흔들면
+        // 위로 흩어진 값이 전부 상한 한 점에 모여 그 구간의 흔들림이 0 이 된다.
+        // 하필 그 구간이 장애가 길어진 때라, F7 이 막으려던 파도가 거기서 그대로
+        // 다시 생긴다. 정상 경로가 이미 같은 방식으로 푼 문제다.
+        long ceiling = Math.round(maxSec / (1 + jitterRatio));
+        long grown = Math.min(baseSec << (streak - 1), ceiling);
+        // **바닥은 천장보다 세다.** 바닥은 폴링 예산이 정한 최소 간격이라, 그보다
+        // 빨리 부르면 장애 구간에만 예산이 안 걸린다. 상한까지만 따른다.
+        long base = Math.clamp(Math.max(grown, floorSec), 1, maxSec);
+        // **남은 여유만큼 편다.** 위 끝을 상한으로 자르면 잘린 만큼이 상한 한
+        // 점에 쌓인다. 자르는 대신 폭을 줄이면 값이 [base, 위끝] 에 고르게 남고,
+        // 바닥이 상한 가까이 와도 몰리지 않는다.
+        long top = Math.min(Math.round(base * (1 + jitterRatio)), maxSec);
+        // **위로만 흔든다.** 아래로 흔들면 바닥보다 빨리 부르게 되어 장애
+        // 구간에만 폴링 예산이 안 걸린다.
+        double jittered = base + (top - base) * random.getAsDouble();
         // 0 은 안 준다. 즉시 재시도는 흩어짐이 없어 파도를 그대로 되돌린다.
         return Math.clamp(Math.round(jittered), 1, maxSec);
     }
